src/Cell.css
.cell {
    height: 33px;
    width: 33px;
    margin: 0.1rem;
    border: solid 1px black;
    display: flex;
    align-items: center;
    justify-content: center;
    color: black;
}

.unselected {
    background-color: lightgrey;
}

.unselected:hover {
    cursor: pointer;
}

.selected {
    background-color: white;
}

.selected:hover {
    cursor: default;
}


@media screen and (max-width: 1400px) {
    .cell {
        height: 20px;
        width: 20px;
        margin: 0.1rem;
    }
}

@media screen and (max-width: 450px) {
    .cell {
        height: 10px;
        width: 10px;
        margin: 0.05rem;
        border: solid 0.5px black;
    }
}

@media screen and (max-width: 400px) {
    .cell {
        height: 9px;
        width: 9px;
        margin: 0.05rem;
        border: solid 0.5px black;
    }
}

